objects/Job_Application__c.object
<CustomObject>
    <fields>
        <fullName>AM_HR_event_attendance__c</fullName>
        <label>AM HR event attendance</label>
        <summaryFilterItems>
            <field>HR_Event_Attendance__c.Candidate_attended_training__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>HR_Event_Attendance__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APL_challenging_behaviour__c</fullName>
        <label>APL: challenging behaviour</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APM_feedback_Good_Excellent__c</fullName>
        <label>APM feedback received</label>
        <summaryFilterItems>
            <field>Feedback__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>APM Feedback (summer staff)</value>
        </summaryFilterItems>
        <summaryForeignKey>Feedback__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Absence_range_1_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Absence range 1 approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Absence_range_2_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Absence range 2 approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Absence_range_3_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Absence range 3 approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acceptable_references_received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acceptable references received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>For payroll purposes</description>
        <label>Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_number__c</fullName>
        <label>Account number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activities_not_able_to_do__c</fullName>
        <inlineHelpText>Are there any activities in which you should not participate? (Some of the activities undertaken on the Personal Challenge are abseiling, kayaking and canoeing, hiking, raft building)</inlineHelpText>
        <label>Activities not able to do</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_Payment_Multiselect__c</fullName>
        <description>Not linked to any workflows/formula</description>
        <label>Ad-Hoc Payment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Graduate/TCS</fullName>
                </value>
                <value>
                    <fullName>Parent Info Eve SW</fullName>
                </value>
                <value>
                    <fullName>Practitioner Plus Training</fullName>
                </value>
                <value>
                    <fullName>PC Meetings</fullName>
                </value>
                <value>
                    <fullName>Ex Gratia</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ad_hoc_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ad-hoc Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_feedback_to_Feedback_log__c</fullName>
        <label>Add feedback to Feedback log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Add_new_notes_to_referee_1__c</fullName>
        <label>Add new notes to referee 1</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Add_new_notes_to_referee_2__c</fullName>
        <label>Add new notes to referee 2</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Added_to_payroll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Added to payroll?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Adjustments_Required__c</fullName>
        <label>Additional Adjustments Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_details_not_covered__c</fullName>
        <inlineHelpText>Application question: Please give additional detail if not already covered</inlineHelpText>
        <label>4.1.6.3.1 PL: further details (ppl mgmt)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_details_of_experience__c</fullName>
        <inlineHelpText>Application question: Please given additional details of your experience here</inlineHelpText>
        <label>4.1.7.3 APL: further details (behaviour)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advice_to_Participants__c</fullName>
        <label>Advice to Participants</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreed_to_consent_statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreed to consent statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allergies__c</fullName>
        <inlineHelpText>You must provide an answer – if no allergies, please state NA. If you do have an allergy please give specific details and any additional information we need to be aware of – i.e. allergy to nuts, and severity of the allergy.</inlineHelpText>
        <label>HSI1A.Allergies</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Allocated_to_Cluster__c</fullName>
        <description>This picklist is for Staffing to update on persons record once they have confirmed with programmes who candidates line manager (thus cluster associated) will be. This information is used as part of handover to the Office Management and Programmes. This is manually updated by Staffing.</description>
        <inlineHelpText>This picklist is for Staffing to update on persons record once they have confirmed with programmes who candidates line manager (thus cluster associated) will be. This information is used as part of handover to the Office Management and Programmes.</inlineHelpText>
        <label>Allocated to Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3BIC</fullName>
                </value>
                <value>
                    <fullName>BBLG</fullName>
                </value>
                <value>
                    <fullName>BHARN</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>BlackCountry</fullName>
                </value>
                <value>
                    <fullName>Brad</fullName>
                </value>
                <value>
                    <fullName>CLS</fullName>
                </value>
                <value>
                    <fullName>East Surrey</fullName>
                </value>
                <value>
                    <fullName>EBB</fullName>
                </value>
                <value>
                    <fullName>Greater Manchester North &amp; Central</fullName>
                </value>
                <value>
                    <fullName>HER</fullName>
                </value>
                <value>
                    <fullName>HEWT</fullName>
                </value>
                <value>
                    <fullName>HiHaB</fullName>
                </value>
                <value>
                    <fullName>Lancs</fullName>
                </value>
                <value>
                    <fullName>LaW</fullName>
                </value>
                <value>
                    <fullName>SCAW</fullName>
                </value>
                <value>
                    <fullName>SMWK</fullName>
                </value>
                <value>
                    <fullName>STORM</fullName>
                </value>
                <value>
                    <fullName>WEB</fullName>
                </value>
                <value>
                    <fullName>West Surrey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allocated_to_Zone__c</fullName>
        <description>This picklist is for Staffing to update on persons record once they have been allocated to a zone. This is step 1 of allocation and means that a person can then be offered a contract. This is manually updated by Staffing.</description>
        <inlineHelpText>This picklist is for Staffing to update on persons record once they have been allocated to a zone. This is step 1 of allocation and means that a person can then be offered a contract. This is manually updated by Staffing.</inlineHelpText>
        <label>Allocated to Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Bucks &amp; Berks</fullName>
                </value>
                <value>
                    <fullName>Lancashire</fullName>
                </value>
                <value>
                    <fullName>London North East</fullName>
                </value>
                <value>
                    <fullName>London North West</fullName>
                </value>
                <value>
                    <fullName>London South East</fullName>
                </value>
                <value>
                    <fullName>London South West</fullName>
                </value>
                <value>
                    <fullName>Manchester</fullName>
                </value>
                <value>
                    <fullName>Surrey</fullName>
                </value>
                <value>
                    <fullName>Warwickshire</fullName>
                </value>
                <value>
                    <fullName>Yorkshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternative_assessment_details__c</fullName>
        <description>Add any info relating to alternative assessment that is not yet in salesforce</description>
        <inlineHelpText>Add any info relating to alternative assessment that is not yet in salesforce</inlineHelpText>
        <label>Alternative assessment details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Any_Learning_Difficulties__c</fullName>
        <label>Any Learning Difficulties?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_Medical_conditions__c</fullName>
        <label>Any Medical conditions?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_Mental_Health_conditions__c</fullName>
        <label>Any Mental Health conditions?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_dates_not_available__c</fullName>
        <description>Any dates that candidate has said they are not available</description>
        <label>Any dates not available</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_salary_payments_outstanding__c</fullName>
        <formula>Number_of_waves__c - Number_of_roles_paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># salary payments outstanding?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>App_form_page_1_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>App form page 1 complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_form_page_2_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>App form page 2 complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_form_page_3_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>App form page 3 complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <formula>IF(
AND( App_form_page_1_complete__c = TRUE,
App_form_page_2_complete__c = TRUE,
App_form_page_3_complete__c = TRUE,App_form_page_4_complete__c = TRUE,
App_form_page_5_complete__c = TRUE), &quot;Application complete&quot;, &quot;Application started&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_absences__c</fullName>
        <inlineHelpText>Programmes and Staffing can write details of any approved absences and cover here.</inlineHelpText>
        <label>Approved absences</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved_by__c</fullName>
        <description>for CRB checking</description>
        <inlineHelpText>Person who approved the CRB</inlineHelpText>
        <label>Approved by</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Area_of_Concern__c</fullName>
        <description>This field relates to the session or skill area there were concerns about within the assessment.</description>
        <inlineHelpText>This field relates to the session or skill area there were concerns about within the assessment.</inlineHelpText>
        <label>Area of Concern</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Ability to motivate and inspire</fullName>
                </value>
                <value>
                    <fullName>2. Positivity and Flexibility</fullName>
                </value>
                <value>
                    <fullName>3. Commitment and Understanding</fullName>
                </value>
                <value>
                    <fullName>4. Ability to facilitate sessions</fullName>
                </value>
                <value>
                    <fullName>5. Teamwork</fullName>
                </value>
                <value>
                    <fullName>6. Problem Solving and Decision Making</fullName>
                </value>
                <value>
                    <fullName>7. Leadership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_of_Strength__c</fullName>
        <description>This field relates to the session or skill area where a candidate showed a particular strength within the assessment.</description>
        <inlineHelpText>This field relates to the session or skill area where a candidate showed a particular strength within the assessment.</inlineHelpText>
        <label>Area of Strength</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Ability to motivate and inspire</fullName>
                </value>
                <value>
                    <fullName>2. Positivity and Flexibility</fullName>
                </value>
                <value>
                    <fullName>3. Commitment and Understanding</fullName>
                </value>
                <value>
                    <fullName>4. Ability to facilitate sessions</fullName>
                </value>
                <value>
                    <fullName>5. Teamwork</fullName>
                </value>
                <value>
                    <fullName>6. Problem Solving and Decision Making</fullName>
                </value>
                <value>
                    <fullName>7. Leadership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_Overall_Score__c</fullName>
        <description>This field relates to the overall score a candidate received at assessment</description>
        <inlineHelpText>This field relates to the overall score a candidate received at assessment</inlineHelpText>
        <label>Assessment Overall Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_Punctuality_Organisation__c</fullName>
        <label>Assessment: Punctuality &amp; Organisation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_Top_Band__c</fullName>
        <description>This relates to the top band of candidates as assessed during the assessment .</description>
        <inlineHelpText>This relates to the top band of candidates as assessed during the assessment .</inlineHelpText>
        <label>Assessment Top Band</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_count__c</fullName>
        <label>Assessment count</label>
        <summaryFilterItems>
            <field>Staffing_Event_attendance__c.Event_Type_from_SE__c</field>
            <operation>equals</operation>
            <value>Assessment</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Staffing_Event_attendance__c.Registration_status__c</field>
            <operation>equals</operation>
            <value>Registered</value>
        </summaryFilterItems>
        <summaryForeignKey>Staffing_Event_attendance__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Assessment_location_preference__c</fullName>
        <inlineHelpText>Application question: Assessment location preference</inlineHelpText>
        <label>Assessment location preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reading</fullName>
                </value>
                <value>
                    <fullName>Leeds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_notes__c</fullName>
        <label>Assessment notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assessment_status_for_recommended_role__c</fullName>
        <inlineHelpText>Application question: Assessment status for Recommended Role</inlineHelpText>
        <label>Assessment status for recommended role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No assessment required (same role)</fullName>
                </value>
                <value>
                    <fullName>No assessment required (similar role)</fullName>
                </value>
                <value>
                    <fullName>Assessment required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_status_next_year__c</fullName>
        <inlineHelpText>Application question: Assessment status next year</inlineHelpText>
        <label>Assessment status next year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No assessment required (same role)</fullName>
                </value>
                <value>
                    <fullName>No assessment required (similar role)</fullName>
                </value>
                <value>
                    <fullName>Assessment required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_borough_area__c</fullName>
        <inlineHelpText>Use this field to select the borough/area(s) that the TCS Mentor will work in.</inlineHelpText>
        <label>Assigned borough/area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barking &amp; Dagenham</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Bexley</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Blackburn</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Bromley</fullName>
                </value>
                <value>
                    <fullName>Burnley</fullName>
                </value>
                <value>
                    <fullName>Bury</fullName>
                </value>
                <value>
                    <fullName>Camden</fullName>
                </value>
                <value>
                    <fullName>City of London</fullName>
                </value>
                <value>
                    <fullName>Coventry</fullName>
                </value>
                <value>
                    <fullName>Croydon</fullName>
                </value>
                <value>
                    <fullName>Dudley</fullName>
                </value>
                <value>
                    <fullName>Ealing</fullName>
                </value>
                <value>
                    <fullName>Enfield</fullName>
                </value>
                <value>
                    <fullName>Greenwich</fullName>
                </value>
                <value>
                    <fullName>Hackney</fullName>
                </value>
                <value>
                    <fullName>Hammersmith &amp; Fulham</fullName>
                </value>
                <value>
                    <fullName>Haringey</fullName>
                </value>
                <value>
                    <fullName>Harrow</fullName>
                </value>
                <value>
                    <fullName>Havering</fullName>
                </value>
                <value>
                    <fullName>Hillingdon</fullName>
                </value>
                <value>
                    <fullName>Hounslow</fullName>
                </value>
                <value>
                    <fullName>Islington</fullName>
                </value>
                <value>
                    <fullName>Kensington &amp; Chelsea</fullName>
                </value>
                <value>
                    <fullName>Kingston</fullName>
                </value>
                <value>
                    <fullName>Lambeth</fullName>
                </value>
                <value>
                    <fullName>Lewisham</fullName>
                </value>
                <value>
                    <fullName>Manchester</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment_end_date__c</fullName>
        <formula>today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignment end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attendance_Status__c</fullName>
        <label>Assessment attendance Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did not attend</fullName>
                </value>
                <value>
                    <fullName>Withdrew</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Rejected at training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attended_assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Staffing metrics</description>
        <label>Attended assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autistic_Spectrum_Disorder__c</fullName>
        <inlineHelpText>Application question: Autistic Spectrum Disorder</inlineHelpText>
        <label>4.1.8.3.1 SW: Autistic Spectrum Disorder</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asperger&apos;s</fullName>
                </value>
                <value>
                    <fullName>Autism - Adaptive behaviour</fullName>
                </value>
                <value>
                    <fullName>Autism - Cognitve</fullName>
                </value>
                <value>
                    <fullName>Autism - Communication</fullName>
                </value>
                <value>
                    <fullName>Autism - Mixed</fullName>
                </value>
                <value>
                    <fullName>Autism - Nonverbal</fullName>
                </value>
                <value>
                    <fullName>Autism - Social/emotional</fullName>
                </value>
                <value>
                    <fullName>Autism - Verbal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Autumn_Choosing_Job_Placements_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autumn: Choosing Job Placements complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autumn_Programme_application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autumn Programme application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autumn_Tax_Dec_requested__c</fullName>
        <label>Autumn Tax Dec. requested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Statement A</fullName>
                </value>
                <value>
                    <fullName>Statement B</fullName>
                </value>
                <value>
                    <fullName>Statement C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Autumn_Viewed_summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autumn: Viewed summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_June_Sept__c</fullName>
        <label>Available June - Sept</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_from_May_June__c</fullName>
        <label>Available from May/June</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BS_roll_number__c</fullName>
        <label>BS roll number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_or_Building_Society__c</fullName>
        <label>Bank or Building Society</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Society__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Building Society</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRB_Issues__c</fullName>
        <description>Any convictions flagged up by DBS check. Only visible to Staffing Manager and Evolution</description>
        <inlineHelpText>Any convictions flagged up by CRB check.</inlineHelpText>
        <label>DBS Issues</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRB_Number__c</fullName>
        <description>DBS number - to be entered by person processing the DBS</description>
        <label>DBS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRB_notes__c</fullName>
        <description>Any notes on CRB application</description>
        <inlineHelpText>Any notes on CRB application</inlineHelpText>
        <label>DBS notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CV_upload_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CV upload complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Candidate_accepted_offer__c</fullName>
        <inlineHelpText>Candidate is asked to accept offer in the unconditional offer email (1.7.1)</inlineHelpText>
        <label>Candidate accepted offer?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_attended_training__c</fullName>
        <label>Candidate attended training?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_can_t_do_any_assessment_dates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Candidate can&apos;t do any dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Candidate_has_created_video__c</fullName>
        <description>Question on application form: Have you created your video?</description>
        <label>Candidate has created video</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_indicated_may_have_DBS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked If an applicant informs us that they have a valid DBS certificate, but doesn&apos;t currently have physical access to it</description>
        <inlineHelpText>Check if an applicant informs you they a DBS (valid for our purposes) but is currently unable to send a scan in.</inlineHelpText>
        <label>Candidate indicated may have DBS</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>